# Service_for_imported_csv_data

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose-local.yml  main2.py  pyproject.toml  requirements.txt  run.py  settings.py
api/: handlers.py  service.py
api/file/: file_handlers.py  file_service.py
api/handlers/: file_handlers.py  user_handlers.py
api/users/: user_handlers.py  user_models.py  user_service.py
db/: alembic.ini  dals.py  models.py  session.py
db/migrations/: env.py
db/migrations/versions/: 5c5f53b2c7f6_comment.py  f262dded28ba_add_table_files.py
templates/: all_tables.html  data.html  tables.html  upload.html  upload_success.html
tests/: alembic.ini  conftest.py  test_handlers.py
