[tool.poetry]
name = "service-for-imported-csv-data"
version = "0.1.0"
description = ""
authors = ["vova2092 <vovai2092@yandex.ru>"]
readme = "README.md"
packages = [{include = "service_for_imported_csv_data"}]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
uvicorn = "0.20.0"
sqlalchemy = "1.4.45"
fastapi = "^0.100.0"
pydantic = {extras = ["email"], version = "^2.1.1"}
envparse = "^0.2.0"
psycopg2 = "^2.9.6"
asyncpg = "^0.28.0"
alembic = "^1.11.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.24.1"
greenlet = "^2.0.2"
passlib = "^1.7.4"
pre-commit = "^3.3.3"
pandas = "^2.0.3"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
